<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

	android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:orientation="vertical"
	
>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:orientation="horizontal"
		android:id="@+id/dropzones"
	>
        <!-- The dropzones come here as linear layout -> text view -->
    </LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="2"
			android:orientation="vertical"
			android:gravity="center"
		>
		<DigitalClock
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"/>
		<LinearLayout android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center">
			<TextView
				android:textSize="20sp"

				android:text="@string/waittime"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
			<TextView
				android:textSize="20sp"
				android:id="@+id/tvWaitTime"
				android:text="-"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		</LinearLayout>
		<TextView
			android:textSize="20sp"
			android:text="@string/last_obs"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		<TextView
			android:textSize="20sp"
			android:id="@+id/tvLastObsType"
			android:text="-"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="100dp"
				android:orientation="horizontal"
				android:gravity="center_horizontal"
			>
				<Button
				android:id="@+id/btnConfirm"
				android:onClick="saveAct"
				android:textSize="20sp"
				android:text="@string/confirm"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			/>
			<Button
				android:id="@+id/btnUndo"
				android:onClick="undoAct"
				android:textSize="20sp"
				android:text="@string/undo"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			/></LinearLayout>
		</LinearLayout>
<LinearLayout
	android:layout_width="match_parent"
    android:layout_height="0dp"
	android:layout_weight="1"
   	android:orientation="horizontal"
	android:gravity="bottom"
	android:id="@+id/dragzones">

    <LinearLayout
        android:id="@+id/topleft"
		android:layout_width="0dp"
		android:layout_weight="1"
        android:layout_height="fill_parent"
       android:background="@drawable/shape" >

        <TextView
            android:id="@+id/txtviews1"
            android:layout_width="fill_parent"
			android:gravity="center"
			android:layout_height="fill_parent"
			android:textSize="20sp"
			android:text="240" />
  </LinearLayout>
    <LinearLayout
        android:id="@+id/topright"
		android:layout_width="0dp"
		android:layout_weight="1"
        android:layout_height="fill_parent"
        android:background="@drawable/shape" >

        <TextView
            android:id="@+id/txtviews2"
            android:layout_width="fill_parent"
			android:gravity="center"
			android:textSize="20sp"
			android:layout_height="fill_parent"
            android:text="242" />
	 </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomleft"
        android:layout_width="0dp"
		android:layout_weight="1"
        android:layout_height="fill_parent"
        android:background="@drawable/shape" >

        <TextView
            android:id="@+id/txtviews3"
            android:layout_width="fill_parent"
			android:gravity="center"
			android:layout_height="fill_parent"
			android:textSize="20sp"
			android:text="244" />
	</LinearLayout>

    <LinearLayout
        android:id="@+id/bottomright"
        android:layout_width="0dp"
		android:layout_weight="1"
        android:layout_height="fill_parent"
        android:background="@drawable/shape" >


        <TextView
            android:id="@+id/txtviews4"
            android:layout_width="fill_parent"
			android:gravity="center"
			android:layout_height="fill_parent"
			android:textSize="20sp"
			android:text="245" />
	</LinearLayout>

    <LinearLayout
        android:id="@+id/bottomright2"
        android:layout_width="0dp"
		android:layout_weight="1"
        android:layout_height="fill_parent"
        android:background="@drawable/shape" >


        <TextView
            android:id="@+id/txtviews5"
            android:layout_width="fill_parent"
			android:gravity="center"
			android:layout_height="fill_parent"
			android:textSize="20sp"
			android:text="260" />
	</LinearLayout>
</LinearLayout>
</LinearLayout>
